--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+:root{
+    --a:0;
+}
 
 * {
     margin: 0px;
@@ -105,7 +108,14 @@ body {
     padding: 10px;
     border-radius: 5px;
     background-color: #252525;
-    position: relative
+    position: relative;
+    transition: all .7s;
+}
+
+.card:hover{
+    background-color: rgb(88, 87, 87);
+    cursor: pointer;
+    --a:1;
 }
 
 .card>* {
@@ -129,7 +139,7 @@ body {
     position: absolute;
     top: 168px;
     right: 17px;
-    opacity: 0;
+    opacity: var(--a);
     transition: all 1s ease-out;
 }
 
